# fastapi_mongo_websocket_learning

./: README.md  config.py  main.py  pyproject.toml
templates/: index.html
